Completed Udacity HTML-CSS Course
Worked through following sections of course:
1. Structuring environment setup.
	Sublime, git, Portfolio folder, css and js folders/
2. Used and practiced with bootstrap.
3. Work required on following features:
	a. Modal response on image - did not open when clicked.
	b. Font weight seemed to be slightly off.
	c. Logo image was centered horizontally, not vertically.

--- a/Portfolio/framework/css/main.css
+++ b/Portfolio/framework/css/main.css
@@ -9,6 +9,11 @@
     box-sizing: border-box;
 }
 
+@media only screen and (max-width: 600px)
+    p{
+        background-color: blue;
+    }
+
 h1{
 	color:blue;
 }
